<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.kandy.starter.CallServiceActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.genband.kandy.api.services.calls.KandyView
            android:id="@+id/activity_calls_video_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />

        <com.genband.kandy.api.services.calls.KandyView
            android:id="@+id/activity_calls_local_video_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="4dp"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/activity_calls_phone_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:hint="@string/activity_calls_phone_number_hint"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/activity_calls_video_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_calls_checkbox_label"
            android:textSize="10sp"/>

        <CheckBox
            android:id="@+id/activity_calls_video_pstn_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_calls_pstn_checkbox_label"
            android:textSize="10sp"/>

        <CheckBox
            android:id="@+id/activity_calls_video_sip_trunk_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_calls_sip_trunk_checkbox_label"
            android:textSize="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <ToggleButton
            android:id="@+id/activity_calls_call_route_speaker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="SP"
            android:textOn="SP"/>

        <ToggleButton
            android:id="@+id/activity_calls_call_route_bluethooth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="BT"
            android:textOn="BT"/>

        <ToggleButton
            android:id="@+id/activity_calls_call_route_headphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="HP"
            android:textOn="HP"/>

        <ToggleButton
            android:id="@+id/activity_calls_call_route_earpiece"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="EP"
            android:textOn="EP"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/activity_calls_call_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/chat_action_btn_selector"
            android:padding="5dp"
            android:src="@drawable/ic_action_call"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/activity_calls_hangup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:src="@drawable/ic_action_end_call"
            android:tint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/activity_calls_hold_tbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/drawable_hold"
                android:textOff=""
                android:textOn=""/>

            <ToggleButton
                android:id="@+id/activity_calls_mute_tbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/drawable_mute"
                android:textOff=""
                android:textOn=""/>

            <ToggleButton
                android:id="@+id/activity_calls_video_tbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff=""
                android:textOn=""/>

            <ToggleButton
                android:id="@+id/activity_calls_switch_camera_tbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textOff=""
                android:textOn=""
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_calls_states_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_calls_state_audio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/activity_calls_state_audio_label"/>

            <TextView
                android:id="@+id/activity_calls_state_video_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/activity_calls_state_video_label"/>

            <TextView
                android:id="@+id/activity_calls_state_call_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/activity_calls_state_calls_label"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>